--- a/css/style.css
+++ b/css/style.css
@@ -147,32 +147,31 @@ header {
 .skills {
   height: 100vh;
   background-color: #FFF;
-  position: relative;
-  background: linear-gradient(180deg, #000, #13305B, #499ADB); }
+  align-items: center;
+  background: linear-gradient(180deg, #000, #13305B, #499ADB);
+  position: relative; }
   .skills .flex-row {
     display: flex;
-    max-width: 80%;
+    flex-wrap: wrap;
+    max-width: 90%;
     margin: 0 auto;
     position: absolute;
     top: 50%;
-    margin-top: -300px;
+    margin-top: -150px;
     left: 0;
     right: 0; }
     .skills .flex-row .progress-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin: 0 20px;
-      width: 100%; }
+      padding: 0 10px;
+      max-width: 100%; }
       .skills .flex-row .progress-container .image-class {
         cursor: pointer;
-        text-align: center; }
-      .skills .flex-row .progress-container .image1 img {
-        width: 70%; }
-      .skills .flex-row .progress-container .image2 img {
-        width: 70%; }
-      .skills .flex-row .progress-container .image3 img {
-        width: 70%; }
+        text-align: center;
+        max-width: 100%;
+        padding: 0 10px; }
+        .skills .flex-row .progress-container .image-class img {
+          width: 300px;
+          max-width: 100%;
+          height: auto; }
       .skills .flex-row .progress-container .progress {
         background-color: #DDDDDD;
         box-sizing: border-box;
@@ -181,34 +180,27 @@ header {
         align-items: center;
         font-size: 30px;
         font-weight: bold;
-        width: 100%;
+        width: 350px;
+        max-width: 100%;
         box-shadow: 0 20px 30px 0 #000;
         color: #DDDDDD; }
-        .skills .flex-row .progress-container .progress .html {
-          width: 0.1%; }
-        .skills .flex-row .progress-container .progress .css3 {
-          width: 0.1%; }
-        .skills .flex-row .progress-container .progress .js {
-          width: 0.1%; }
-  .skills .career-goal {
-    position: absolute;
-    bottom: 10%;
-    max-width: 80%;
-    margin: 0 auto;
-    left: 0;
-    right: 0; }
-    .skills .career-goal p {
-      color: #FFF;
-      font-family: 'Mitr', sans-serif;
-      font-weight: semi-bold;
-      font-size: 30px;
-      text-align: center;
-      cursor: pointer; }
-      .skills .career-goal p:hover {
-        box-shadow: 0 0 20px 10px #e6e6e6;
-        transition: 1s; }
+        .skills .flex-row .progress-container .progress .progress-bar {
+          width: 0.1%;
+          max-width: 100%; }
+    .skills .flex-row .career-goal {
+      margin: 50px;
+      display: block; }
+      .skills .flex-row .career-goal p {
+        color: #FFF;
+        font-family: 'Mitr', sans-serif;
+        font-weight: semi-bold;
+        font-size: 30px;
+        text-align: center;
+        cursor: pointer; }
+        .skills .flex-row .career-goal p:hover {
+          box-shadow: 0 0 20px 10px #e6e6e6;
+          transition: 1s; }
 
-/*------------------------------*/
 /* HOVER SKILLS */
 /*------------------------------*/
 /* Hover HTML */
@@ -291,10 +283,9 @@ header {
         display: block;
         text-align: center;
         cursor: pointer;
-        height: 300px;
         width: 500px;
         max-width: 100%;
-        max-height: 100%;
+        height: auto;
         margin: 40px auto;
         box-shadow: 0 10px 40px 20px #FFF; }
         .projects .flex-row .projects-images img:hover {
@@ -523,7 +514,11 @@ footer {
   .col-s-12 {
     flex: 100%; }
 
+  /* Skills section */
   /*------------------------------*/
+  .skills {
+    height: 100%; }
+
   /* Projects section */
   /*------------------------------*/
   .projects {
@@ -575,7 +570,19 @@ footer {
   .col-m-12 {
     flex: 100%; }
 
+  /* Skills section */
   /*------------------------------*/
+  .skills {
+    height: 100%;
+    padding-top: 200px;
+    padding-bottom: 200px; }
+    .skills .flex-row {
+      position: static; }
+      .skills .flex-row .progress-container {
+        margin: 20px auto; }
+      .skills .flex-row .career-goal {
+        margin: 30px; }
+
   /* Projects section */
   /*------------------------------*/
   .projects {
