--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,7 @@ header {
         border-radius: 20px;
         border: none;
         outline: none;
+        background-color: #FFF;
         box-shadow: 0 10px 40px 0 #FFF; }
         .projects .flex-row .projects-images .github:hover {
           color: #FFF;
@@ -310,8 +311,7 @@ header {
           transition: .6s;
           transform: scale(1.1); }
       .projects .flex-row .projects-images .portfolio-btn {
-        color: #2162AF;
-        background-color: #FFF; }
+        color: #2162AF; }
         .projects .flex-row .projects-images .portfolio-btn:hover {
           color: #FFF;
           background-color: #2162AF; }
@@ -319,7 +319,6 @@ header {
         color: #fa9600;
         background-color: #FFF; }
         .projects .flex-row .projects-images .fire-btn:hover {
-          color: #FFF;
           background-color: #fa9600; }
 
 /*------------------------------*/
@@ -514,10 +513,18 @@ footer {
   .col-s-12 {
     flex: 100%; }
 
+  .border {
+    padding-top: 100px;
+    padding-bottom: 100px; }
+
   /* Skills section */
   /*------------------------------*/
   .skills {
     height: 100%; }
+    .skills .flex-row {
+      position: static; }
+      .skills .flex-row .progress-container {
+        margin: 20px auto; }
 
   /* Projects section */
   /*------------------------------*/
@@ -569,6 +576,10 @@ footer {
 
   .col-m-12 {
     flex: 100%; }
+
+  .border {
+    padding-top: 100px;
+    padding-bottom: 100px; }
 
   /* Skills section */
   /*------------------------------*/
