--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ header {
     background-repeat: no-repeat;
     postition: relative; }
     .jumbotron .particles .text {
-      color: white;
+      color: #FFF;
       font-size: 40px;
       font-weight: bold;
       position: absolute; }
@@ -333,7 +333,6 @@ header {
 
 .game {
   height: 100vh;
-  background-color: #e6e6e6;
   margin: 0;
   background-image: url("../images/girl_wall2.jpg");
   background-position: center;
