--- a/css/style.scss
+++ b/css/style.scss
@@ -646,7 +646,24 @@ footer {
 	/* Game section */
 	/*------------------------------*/
 	.game {
-		max-height: 100vh;
+		height: 100%;
+		h1 {
+			margin-bottom: 0;
+			font-size: 40px;
+		}
+		.container-title {
+			margin: 20px auto;
+			h1 {
+				display: block;
+				text-align: center;
+			}
+			span {
+				display: inline-block;
+				text-align: center;
+				margin-top: 20px;
+				line-height: 40px;
+			}
+		}
 		.results {
 			.row {
 				margin: 15px auto;
