--- a/css/style.scss
+++ b/css/style.scss
@@ -398,7 +398,7 @@ header {
 	border: $green_color;
 }
 .game {
-	height: 100vh;
+	min-height: 100vh;
 	margin: 0;
 	background-image: url('../images/girl_wall2.jpg');
 	background-position: center;
@@ -608,6 +608,11 @@ footer {
 
 	.jumbotron {
 		max-height: 100%;
+		.particles {
+			.text {
+				font-size: 30px;
+			}
+		}
 	}
 
 	/* Skills section */
