--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ header {
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    postition: relative; }
+    position: relative; }
     .jumbotron .particles .text {
       color: #FFF;
       font-size: 40px;
@@ -146,7 +146,6 @@ header {
 .skills {
   height: 100vh;
   background-color: #FFF;
-  align-items: center;
   background: linear-gradient(180deg, #000, #13305B, #499ADB);
   position: relative; }
   .skills .flex-row {
@@ -154,7 +153,7 @@ header {
     margin: 0 auto;
     position: absolute;
     top: 50%;
-    margin-top: -150px;
+    margin-top: -270px;
     left: 0;
     right: 0; }
     .skills .flex-row .progress-container {
@@ -185,15 +184,15 @@ header {
           width: 0.1%;
           max-width: 100%; }
     .skills .flex-row .career-goal {
-      margin: 50px;
+      margin: 50px 50px 0 50px;
       display: block; }
       .skills .flex-row .career-goal p {
         color: #FFF;
         font-family: 'Mitr', sans-serif;
-        font-weight: semi-bold;
         font-size: 30px;
         text-align: center;
-        cursor: pointer; }
+        cursor: pointer;
+        margin: auto; }
         .skills .flex-row .career-goal p:hover {
           box-shadow: 0 0 20px 10px #e6e6e6;
           transition: 1s; }
@@ -477,7 +476,8 @@ footer {
     height: auto; }
     header .menu {
       display: inline-block;
-      width: 100%; }
+      width: 100%;
+      text-align: center; }
       header .menu .portfolio {
         display: inline-block;
         height: 50px;
