CSS validator error update_2

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 .button {
   height: 50px;
   width: 250px;
+  max-width: 100%;
   border-radius: 20px;
   font-size: 25px;
   font-weight: bold;
@@ -475,13 +476,11 @@ footer {
   header {
     height: auto; }
     header .menu {
-      display: inline-block;
       width: 100%;
       text-align: center; }
       header .menu .portfolio {
         display: inline-block;
         height: 50px;
-        vertical-align: middle;
         max-width: 100%;
         margin: auto;
         line-height: 50px; }
