--- a/css/style.scss
+++ b/css/style.scss
@@ -36,6 +36,7 @@ body {
 .button {
 	height: 50px;
 	width: 250px;
+	max-width: 100%;
 	border-radius: 20px;
 	font-size: 25px;
 	font-weight: bold;
@@ -557,13 +558,11 @@ footer {
 	header {
 		height: auto;
 		.menu {
-			display: inline-block;
 			width: 100%;
 			text-align: center;
 			.portfolio {
 				display: inline-block;
 				height: 50px;
-				vertical-align: middle;
 				max-width: 100%;
 				margin: auto;
 				line-height: 50px;
@@ -627,7 +626,6 @@ footer {
 			}
 		}
 	}
-
 
 	/* Projects section */
 	/*------------------------------*/
