--- a/css/style.scss
+++ b/css/style.scss
@@ -558,6 +558,7 @@ footer {
 	header {
 		height: auto;
 		.menu {
+			display: inline-block;
 			width: 100%;
 			text-align: center;
 			.portfolio {
