--- a/css/style.scss
+++ b/css/style.scss
@@ -590,6 +590,7 @@ footer {
 				float: center;
 				display: block;
 				text-align: center;
+				padding: 0;
 				li {
 					display: block;
 					text-align: center;
