--- a/css/style.scss
+++ b/css/style.scss
@@ -567,6 +567,7 @@ footer {
 				max-width: 100%;
 				margin: auto;
 				line-height: 50px;
+				margin-left: 25px;
 			}
 			label {
 				display: inline-block;
